--- a/StoreManagement/Views/Shared/_Layout.cshtml
+++ b/StoreManagement/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://unpkg.com/html5-qrcode"></script>
     <script src="~/js/Toast.js"></script>
 </head>
 <body>
