--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -116,13 +116,13 @@
                     <input type="hidden" id="customerId" name="customerId" value="0">
                     @* <div asp-validation-summary="ModelOnly" class="text-danger mb-2"></div> *@
                     <div class="mb-3">
-                        <label class="form-label">Họ tên</label>
+                        <label class="form-label">Họ tên*</label>
                         <input type="text" class="form-control" id="fullname" name="Name">
                         <span class="text-danger"></span>
                         <small id="fullname-msg" class="form-text text-danger"></small>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Số điện thoại</label>
+                        <label class="form-label">Số điện thoại*</label>
                         <input type="text" class="form-control" id="phonenumber" name="PhoneNumber">
                         <span class="text-danger"></span>
                         <small id="phonenumber-msg" class="form-text text-danger"></small>
