--- a/Views/OrderStaff/Index.cshtml
+++ b/Views/OrderStaff/Index.cshtml
@@ -101,7 +101,6 @@
                         </tbody>
                     </table>
                 </div>
-
             </div>
             <hr class="my-3">
             <div>
@@ -163,11 +162,11 @@
             <div class="modal-body">
                 <form id="addCustomerForm" data-url="/OrderStaff/AddCustomer">
                     <div class="mb-3">
-                        <label class="form-label">Tên khách hàng</label>
+                        <label class="form-label">Tên khách hàng*</label>
                         <input type="text" class="form-control" name="Name" placeholder="Nhập tên khách hàng">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Số điện thoại</label>
+                        <label class="form-label">Số điện thoại*</label>
                         <input type="text" class="form-control" name="Phone" placeholder="Nhập số điện thoại">
                     </div>
                     <div class="mb-3">
